# porta

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  UI-design.md  package-lock.json  package.json  porta-design.md  porta-requirement.md  porta.node.key
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  release.yml
backend/: Cargo.toml  porta-test-91587.key  porta-test-91878.key  porta-test-92000.key  porta-test-92814.key  porta.node.key
backend/data/: porta.db
backend/src/: app.rs  lib.rs  main.rs  mock.rs  models.rs  resp.rs  response.rs  state.rs
backend/src/p2p/: mod.rs  node.rs  protocol.rs
backend/src/proxy/: mod.rs
backend/src/routes/: community.rs  mod.rs  node.rs  proxy.rs  service.rs
backend/src/tunnel/: mod.rs
backend/tests/: models.rs  protocol.rs  routes.rs
docs/: config-migration-summary.md  configuration-guide.md  connection-fix-summary.md  connection-logic-rewrite.md  dial-failure-analysis.md  logging-improvements.md  p2p-diagnosis-report.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: main.ts  types.ts
frontend/src/layouts/: MainLayout.vue
frontend/src/pages/: CommunitiesPage.vue  CommunityDetailPage.vue  CommunityServiceManagementPage.vue  NodeManagementPage.vue  PublishPage.vue  ServiceAccessPage.vue  ServicesPage.vue  SettingsPage.vue
frontend/src/router/: index.ts
frontend/src/services/: api.ts  mock.ts
frontend/src/styles/: global.css
frontend/tests/: api.spec.ts  router.spec.ts  types.spec.ts
scripts/: clean-mock-communities.sh  e2e-cascade-test.sh  release.sh  run-all-tests.sh  start-nodes.sh  test-community-join.sh  test-config-and-join.sh  test-p2p-connection.sh  test-setup.sh  test-utils.sh
scripts/tests/: 01-node-config.sh  02-community-management.sh  03-service-publish.sh  04-service-discovery.sh  05-service-subscribe.sh  06-service-connect.sh  07-community-node-mgmt.sh  08-community-service-mgmt.sh  09-secure-routing.sh  10-omega-proxy.sh
server/: Cargo.toml  README-config.md  build.rs  community.toml  edge.toml  install.sh  porta-community.db  porta-community.key  porta-edge.db  porta-edge.key  porta.db  porta.node.key  porta.service  porta.toml  porta.toml.example  porta2.db  porta2.toml
server/src/: config.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
