[package]
name = "porta-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["cors"] }
async-trait = "0.1"
libp2p = { version = "0.53.2", features = ["tokio", "tcp", "dns", "noise", "yamux", "identify", "ping", "request-response"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
anyhow = "1.0"

[dev-dependencies]
tower = "0.5"
hyper = { version = "1", features = ["client", "http1", "http2"] }
